@@ -107,15 +107,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|LinkedList
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|List
 import|;
 end_import
@@ -146,6 +137,17 @@ operator|.
 name|concurrent
 operator|.
 name|Callable
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|CopyOnWriteArrayList
 import|;
 end_import
 begin_import
@@ -580,7 +582,7 @@ argument_list|>
 name|jettys
 init|=
 operator|new
-name|LinkedList
+name|CopyOnWriteArrayList
 argument_list|<>
 argument_list|()
 decl_stmt|;
